JS update, fixing flickering

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,6 @@ a {
 }
 
 body {
-	text-align: center;
 	--background: linear-gradient(to bottom, rgba(66, 134, 244,0), rgba(66, 134, 244,1));
 	scroll-behavior: smooth;
 }
@@ -18,7 +17,7 @@ body {
 	height: 100%;
 	width: 100%;
 	position: fixed;
-	---background: linear-gradient(to top, rgba(66, 134, 244,0), rgba(66, 134, 244,1));
+	--background: linear-gradient(to top, rgba(66, 134, 244,0), rgba(66, 134, 244,1));
 	background: linear-gradient(to top, rgba(0, 0, 0,0), rgba(0, 0, 0,1));
 }
 
@@ -44,6 +43,7 @@ body {
 }
 
 nav {	
+	text-align: center;
 	position: fixed;
 	background-color: rgba(0, 0, 0, .8);	
 	height: 100vh;
@@ -71,13 +71,24 @@ li  a{
 	margin: 0; 
 }
 
+#home {
+	margin: 1em 0 25vh 0;
+}
+
 #home a:hover {
-	--margin-bottom: 25vh; 
 	color: grey;
+}
+
+#about {
+	margin-bottom: .5em;
 }
 
 #about a:hover{
 	color: blue;
+}
+
+#portfolio {
+	margin-bottom: .5em;
 }
 
 #portfolio a:hover {
@@ -86,6 +97,11 @@ li  a{
 
 #contact a:hover {
 	color: red;
+}
+
+#git {
+	margin-top: auto;
+	margin-bottom: 1em;
 }
 
 #git a:hover {
@@ -106,7 +122,6 @@ h1 {
 }
 
 .lower {
-	margin-top: 2em;
 	display: inline;
 	--line-height: 0;
 }
@@ -152,6 +167,21 @@ h1 {
 }
 
 section {
-	height: 100vh;
+	min-height: 100vh;
 	position: relative;
+}
+
+#main {
+	text-align: center;
+	transition: all 2s;
+}
+
+section:not(#main) {
+	padding: 4.5em 0 0 10em;
+}
+
+.underline {
+	width: 40vw;
+	height: 3px;
+	background-color: black;
 }
